--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-router-dom": "^6.20.0",
     "urql": "^4.0.6"
   },
   "devDependencies": {
